--- a/.github/workflows/run-linter.yml
+++ b/.github/workflows/run-linter.yml
@@ -3,29 +3,29 @@ name: Lint Code
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   lint:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    - name: Install pylint
-      run: |
-        python -m pip install --upgrade pip
+      - name: Install dependencies
+        run: |
+         python -m pip install --upgrade pip
             pip install -r requirements.txt
 
-    - name: Run pylint
-      run: |
-        pylint **/*.py
+      - name: Run Flake8
+        run: |
+          flake8 .
